maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: ambiguous reference to overloaded definition,
both method keepHandOnSideWall in class Escaper of type ()Unit
and  method keepHandOnSideWall in class Escaper of type ()Unit
match argument types ()
      keepHandOnSideWall();
      ^Escaper:69: error: ambiguous reference to overloaded definition,
both method keepHandOnSideWall in class Escaper of type ()Unit
and  method keepHandOnSideWall in class Escaper of type ()Unit
match argument types ()
    keepHandOnSideWall();
    ^Escaper:60: error: method keepHandOnSideWall is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Escaper'
def keepHandOnSideWall() {
    ^